# GNG5300-Simplegram

./: .gitignore  docker-compose.yml
.github/workflows/: be-deploy.yml  fe-deploy.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/api/: schema.py
backend/auth/: graphql.py  views.py
backend/post/: graphql.py  models.py
backend/post/migrations/: 0001_initial.py
backend/server/: asgi.py  settings.py  urls.py  wsgi.py
backend/user/: graphql.py
backend/user/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.scss  App.tsx  index.tsx
frontend/src/components/: index.scss  index.tsx
frontend/src/components/ImageCard/: index.tsx
frontend/src/components/ImageCard/__test__/: ImageCard.test.tsx
frontend/src/components/LikeIcon/: index.scss  index.tsx
frontend/src/components/ResponsiveMasonry/: index.scss  index.tsx
frontend/src/components/SkeletonCard/: index.scss  index.tsx
frontend/src/components/ThemeProvider/: index.tsx
frontend/src/components/ThemeProvider/__test__/: SwitchColorScheme.test.tsx
frontend/src/components/TopBar/: index.scss  index.tsx
frontend/src/hooks/: index.tsx  useAnimateOnScroll.tsx
frontend/src/icons/: index.ts
frontend/src/images/: index.ts
frontend/src/styles/: mixins.scss
frontend/src/types/: index.d.ts
